--- a/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
+++ b/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=E-Grampanchayat
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/egrampanchayat
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8082
+
+server.port=${PORT:8080}
 # Static file directory
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=10MB
