Added Dockerfile for Spring Boot deployment

--- a/E/E-Grampanchayat/E-Grampanchayat/Dockerfile
+++ b/E/E-Grampanchayat/E-Grampanchayat/Dockerfile
@@ -1,33 +1,23 @@
-# backend/Dockerfile
-# Build stage
+# backend/Dockerfile - Forces Java 17
 FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
 
-# Copy Maven files
+# Copy Maven wrapper (if you have it)
+COPY mvnw .
+COPY .mvn .mvn
 COPY pom.xml .
-# Download dependencies (cache if pom.xml hasn't changed)
-RUN mvn dependency:go-offline -B
-
-# Copy source code
 COPY src ./src
 
-# Build the application
-RUN mvn clean package -DskipTests
+# Build explicitly with Java 17
+RUN chmod +x mvnw && \
+    ./mvnw clean package -DskipTests \
+    -Dmaven.compiler.source=17 \
+    -Dmaven.compiler.target=17 \
+    -Dmaven.compiler.release=17
 
-# Runtime stage
+# Runtime with Java 17
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
-
-# Create non-root user for security
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-USER appuser
-
-# Copy the built jar
-COPY --from=builder --chown=appuser:appgroup /app/target/*.jar app.jar
-
-# Expose port (Render uses $PORT environment variable)
-ENV PORT=8080
-EXPOSE $PORT
-
-# Run with environment-based port
-ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT} -jar app.jar"]
+COPY --from=builder /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
