--- a/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
+++ b/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=E-Grampanchayat
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DB_URL}
+
+# For FIRST TIME DEPLOYMENT ONLY - creates tables
+spring.jpa.hibernate.ddl-auto=create
+# After successful deployment, change to:
+# spring.jpa.hibernate.ddl-auto=update
+
+# Aiven MySQL with SSL parameters
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=true&requireSSL=true&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +16,7 @@ server.port=${PORT:8080}
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Show SQL for debugging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
