--- a/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
+++ b/E/E-Grampanchayat/E-Grampanchayat/src/main/resources/application.properties
@@ -1,22 +1,19 @@
 spring.application.name=E-Grampanchayat
 
-# For FIRST TIME DEPLOYMENT ONLY - creates tables
+# FOR FIRST DEPLOYMENT ONLY - will create tables
 spring.jpa.hibernate.ddl-auto=create
-# After successful deployment, change to:
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-# Aiven MySQL with SSL parameters
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=true&requireSSL=true&serverTimezone=UTC
+# Aiven MySQL - Use the FULL JDBC URL from Aiven
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Keep these as they are
 server.port=${PORT:8080}
-# Static file directory
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Show SQL for debugging
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Optional: Add explicit MySQL dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
